--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
 
 <body>
     <div class="parent">
-        <div class="child">
+        <div class="child" id="child-1">
             <h2>header</h2>
         </div>
-        <div class="child">
+        <div class="child" id="child-2">
             <h2>header</h2>
         </div>
-        <div class="child">
-            <h2>header</h2>
-        </div>
-        <div class="child">
+        <div class="child" id="child-3">
             <h2>header</h2>
         </div>
     </div>
