--- a/index.html
+++ b/index.html
@@ -11,15 +11,37 @@
 <body>
     <div class="parent">
         <div class="child" id="child-1">
-            <h2>header</h2>
+            <h2>Header</h2>
         </div>
         <div class="child" id="child-2">
-            <h2>header</h2>
+            <h2>Header</h2>
         </div>
         <div class="child" id="child-3">
-            <h2>header</h2>
+            <h2>Header</h2>
         </div>
     </div>
-</body>
+    <div class="parent">
+        <div class="child" id="child-4">
+            <h2>Header</h2>
+        </div>
+        <div class="child" id="child-5">
+            <h2>Header</h2>
+        </div>
+        <div class="child" id="child-6">
+            <h2>Header</h2>
+        </div>
+    </div>
+    <div class="parent">
+        <div class="child" id="child-7">
+            <h2>Header</h2>
+        </div>
+        <div class="child" id="child-8">
+            <h2>Header</h2>
+        </div>
+        <div class="child" id="child-9">
+            <h2>Header</h2>
+        </div>
+    </div>
 
+</body>H
 </html>
