--- a/index.html
+++ b/index.html
@@ -12,36 +12,45 @@
     <div class="parent">
         <div class="child" id="child-1">
             <h2>Header</h2>
+            <p>Paragraph</p>
         </div>
         <div class="child" id="child-2">
             <h2>Header</h2>
+            <p>Paragraph</p>
         </div>
         <div class="child" id="child-3">
             <h2>Header</h2>
+            <p>Paragraph</p>
         </div>
     </div>
     <div class="parent">
         <div class="child" id="child-4">
             <h2>Header</h2>
+            <p>Paragraph</p>
         </div>
         <div class="child" id="child-5">
             <h2>Header</h2>
+            <p>Paragraph</p>
         </div>
         <div class="child" id="child-6">
             <h2>Header</h2>
+            <p>Paragraph</p>
         </div>
     </div>
     <div class="parent">
         <div class="child" id="child-7">
             <h2>Header</h2>
+            <p>Paragraph</p>
         </div>
         <div class="child" id="child-8">
             <h2>Header</h2>
+            <p>Paragraph</p>
         </div>
         <div class="child" id="child-9">
             <h2>Header</h2>
+            <p>Paragraph</p>
         </div>
     </div>
 
-</body>H
+</body>
 </html>
