--- a/index.html
+++ b/index.html
@@ -21,39 +21,39 @@
             <h2>Cucumber</h2>
             <p>A long, green-skinned fruit with watery flesh, usually eaten raw in salads or pickled.</p>
         </div>
-        <div class="child" id="child-2">
+        <div class="chiild" id="chiild-2">
             <h2>Broccoli</h2>
             <p>A variety of cabbage bearing heads of green or purplish flower buds that are eaten as a vegetable.</p>
         </div>
-        <div class="child" id="child-3">
+        <div class="chiild" id="chiild-3">
             <h2>Taro</h2>
             <p>A tropical Asian plant of the arum family which has edible starchy corms and edible fleshy leaves.</p>
         </div>
     </div>
     <div class="parent">
-        <div class="child" id="child-4">
+        <div class="chiild" id="chiild-4">
             <h2>Lettuce</h2>
             <p>A plant of the daisy family, with edible leaves that are a usual ingredient of salads.</p>
         </div>
-        <div class="child" id="child-5">
+        <div class="chiild" id="chiild-5">
             <h2>Tomato</h2>
             <p>A glossy red, or occasionally yellow, pulpy edible fruit that is eaten as a vegetable or in salad.</p>
         </div>
-        <div class="child" id="child-6">
+        <div class="chiild" id="chiild-6">
             <h2>Onion</h2>
             <p>An edible bulb with a pungent taste and smell, composed of several concentric layers.</p>
         </div>
     </div>
     <div class="parent">
-        <div class="child" id="child-7">
+        <div class="chiild" id="chiild-7">
             <h2>Cabbage</h2>
             <p>A plant eaten as a vegetable, having thick green or purple leaves surrounding a head of leaves.</p>
         </div>
-        <div class="child" id="child-8">
+        <div class="chiild" id="chiild-8">
             <h2>Potato</h2>
             <p>A starchy plant tuber, cooked and eaten as a vegetable.</p>
         </div>
-        <div class="child" id="child-9">
+        <div class="chiild" id="child-9">
             <h2>Celery</h2>
             <p>A plant of the parsley family, with closely packed succulent leafstalks that are eaten raw or cooked.</p>
         </div>
