--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1>Vegetables</h1>
+    <h1 id="h1">Vegetables</h1>
     <section class="gallery">
         <div class="box" id="box-1">
             <h2>Cucumber</h2>
